updates to hide advanced

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header class="app-header">
     <h1>Colorimeter Simulator — Betalain (Beetroot)</h1>
     <div class="header-right">
+      <button id="advancedToggle" class="ghost" aria-expanded="false" aria-controls="advancedPanel">Advanced</button>
       <button id="resetAll" class="ghost">Reset</button>
       <a class="ghost" href="#about">About</a>
     </div>
@@ -53,17 +54,19 @@
         <button id="clearCalibration" class="ghost">Clear calibration</button>
       </div>
 
-      <h3>Bleaching simulation</h3>
-      <p class="hint">Optional: simulate photodegradation of betalain under light.</p>
-      <div class="control">
-        <label for="bleachRate">Bleach rate k (1/min)
-          <output id="bleachRateOut">0.020</output>
-        </label>
-        <input type="range" id="bleachRate" min="0" max="0.1" value="0.02" step="0.001" />
-      </div>
-      <div class="buttons">
-        <button id="bleachToggle">Start bleaching</button>
-        <button id="bleachReset" class="ghost">Reset concentration</button>
+      <div id="advancedPanel" class="advanced is-hidden">
+        <h3>Bleaching simulation</h3>
+        <p class="hint">Optional: simulate photodegradation of betalain under light.</p>
+        <div class="control">
+          <label for="bleachRate">Bleach rate k (1/min)
+            <output id="bleachRateOut">0.020</output>
+          </label>
+          <input type="range" id="bleachRate" min="0" max="0.1" value="0.02" step="0.001" />
+        </div>
+        <div class="buttons">
+          <button id="bleachToggle">Start bleaching</button>
+          <button id="bleachReset" class="ghost">Reset concentration</button>
+        </div>
       </div>
 
       <div class="readouts">
