updated auto calibration curve mode.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
       <div class="buttons">
         <button id="measureBtn">Measure (add to calibration)</button>
+        <button id="autoCalibrateBtn" class="ghost" aria-pressed="false" title="Auto-generate calibration points">📈 Auto calibrate</button>
         <button id="clearCalibration" class="ghost">Clear calibration</button>
       </div>
 
