--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <!-- LED source -->
           <g transform="translate(40, 90)">
             <rect x="0" y="0" width="80" height="60" rx="8" fill="#263238" />
-            <circle cx="80" cy="30" r="10" fill="#fdd835" filter="url(#glow)" />
+            <circle id="led" class="led" cx="80" cy="30" r="10" fill="#fdd835" filter="url(#glow)" />
             <text x="40" y="80" text-anchor="middle" class="label">LED</text>
           </g>
 
