updated LED to green

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <!-- Background -->
           <defs>
             <linearGradient id="beamGrad" x1="0%" y1="0%" x2="100%" y2="0%">
-              <stop offset="0%" stop-color="#fff59d" stop-opacity="0.9" />
-              <stop offset="100%" stop-color="#fff59d" stop-opacity="0" />
+              <stop offset="0%" stop-color="#b9f6ca" stop-opacity="0.9" />
+              <stop offset="100%" stop-color="#b9f6ca" stop-opacity="0" />
             </linearGradient>
             <linearGradient id="detectorGrad" x1="0%" y1="0%" x2="0%" y2="100%">
               <stop offset="0%" stop-color="#c8e6c9" />
@@ -121,7 +121,7 @@
           <!-- LED source -->
           <g transform="translate(40, 90)">
             <rect x="0" y="0" width="80" height="60" rx="8" fill="#263238" />
-            <circle id="led" class="led" cx="80" cy="30" r="10" fill="#fdd835" filter="url(#glow)" />
+            <circle id="led" class="led" cx="80" cy="30" r="10" fill="#16e231" filter="url(#glow)" />
             <text x="40" y="80" text-anchor="middle" class="label">LED</text>
           </g>
 
